<resources>
    <string name="app_name">Agenda de Contatos</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="menuitem_edit">Editar</string>
    <string name="menuitem_delete">Deletar</string>
    <string name="hint_name_required">Nome (Obrigatório)</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_phone">Telefone</string>
    <string name="label_name">Nome:</string>
    <string name="label_email">E-mail:</string>
    <string name="label_phone">Telefone:</string>

    /---------------------------------------------/
    <string name="nameLabelTextView">Nome:</string>
    <string name="phoneLabelTextView">Phone:</string>
    <string name="emailLabelTextView">Email:</string>
    <string name="nameEditText">Nome (Obrigatório)</string>
    <string name="phoneEditText">Telefone</string>
    <string name="emailEditText">Email</string>>

</resources>